--- a/preview.yaml
+++ b/preview.yaml
@@ -1,7 +1,8 @@
 apiVersion: 1.0.0
+
 previews:
-  - name: sample-app
+  - name: default
     container:
-      image: mgoltzsche/sample-app-minimal:${ENV_COMMIT_SHA}
+      image: eu.gcr.io/wombat-dev-283614/sample-app-minimal:${ENV_COMMIT_SHA}
       port: 8080
 
