--- a/preview.yaml
+++ b/preview.yaml
@@ -5,4 +5,7 @@ previews:
     container:
       image: eu.gcr.io/wombat-dev-283614/sample-app-minimal:${ENV_COMMIT_SHA}
       port: 80
-
+  - name: debug-context
+    container:
+      image: eu.gcr.io/wombat-dev-283614/sample-app-minimal:${ENV_COMMIT_SHA}
+      port: 80
