--- a/.preview.yaml
+++ b/.preview.yaml
@@ -4,8 +4,10 @@ previews:
   - name: default
     container:
       image: eu.gcr.io/wombat-dev-283614/sample-app-minimal:${ENV_COMMIT_SHA}
-      port: 80
+      ports:
+      - value: 80
   - name: debug-context
     container:
       image: eu.gcr.io/wombat-dev-283614/sample-app-minimal:${ENV_COMMIT_SHA}
-      port: 80
+      ports:
+      - value: 80
